tests/paczka2/big_fuzzy/53050652.err
Error in line 8: A919 S6 33,3
Error in line 19: FEKzaN4zgo0 A146 62,4
Error in line 34: A919 S6 1,9
Error in line 38: FEKzaN4zgo0 A919 8,9
Error in line 41: FEKzaN4zgo0 S6 45,0
Error in line 44: O6vk4n4Q A146 17,3
Error in line 36: A919 A189 2,0
Error in line 50: O6vk4n4Q A189 84,9
Error in line 51: A919 A146 14,4
Error in line 56: 2Ipju A146 43,4
Error in line 70: O6vk4n4Q A146 -5,0
Error in line 79: O6vk4n4Q A146 214,2
Error in line 91: 2Ipju A189 33,6
Error in line 93: 2Ipju S6 72,0
Error in line 98: 2Ipju A189 39,7
Error in line 125: A919 A919 39,8
Error in line 118: 5AA A146 87,2
Error in line 139: O6vk4n4Q A]89 97,0
Error in line 140: FEKzaN4zgo0 A146 46,15
Error in line 152: 5AA A189 271,5
Error in line 156: A919 A189 -1,3
Error in line 123: 2Ipju A189 245,4
Error in line 160: FgGysRQEH S6 2,2
Error in line 166: FgGysRQEH A146 26,7
Error in line 161: 2Ipju A146 18,0
Error in line 170: 2Ipju S6 35,0
Error in line 154: A919 A189 68,9
Error in line 176: 6APXiR9 A89 5,6
Error in line 177: 6APXiR9 S6 27,0
Error in line 179: O6vk4n4Q A919 33,9
Error in line 182: 5AA A919 85,3
Error in line 181: O6vk4n4Q A189 99,1
Error in line 175: A919 S6 34,2
Error in line 185: O6vk4n4Q S6 10,3
Error in line 196: 2Ipju A919 41,0
Error in line 193: 6APXiR9 A189 98,1
Error in line 208: FEKzaN4zgo0 A146 41,7
Error in line 203: 6APXiR9 A146 17,8
Error in line 198: O6vk4n4Q A189 27,4
Error in line 212: O6vk4n4Q A919 13,4
Error in line 207: 2Ipju S6 83,1
Error in line 217: 5AA A189 -1,5
Error in line 221: O6vk4n4Q S6 96,4
Error in line 232: FEKzaN4zgo0 S6 34,3
Error in line 236: 6APXiR9 S6 93,3
Error in line 245: FgGysRQEH A919 87,59
Error in line 247: 6APXiR9 A189 -2,8
Error in line 206: 5AA A189 137,0
